--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.2",
     "@tabler/icons-react": "^3.4.0",
     "class-variance-authority": "^0.7.0",
