--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tabler/icons-react": "^3.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.11",
     "framer-motion": "^11.2.4",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.378.0",
