--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "framer-motion": "^11.2.4",
+    "geist": "^1.3.0",
     "input-otp": "^1.2.4",
     "jotai": "^2.8.1",
     "lucide-react": "^0.378.0",
